@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2819 2006/03/15 09:29:50 suz Exp $
+$KAME: CHANGELOG,v 1.2820 2006/03/17 07:23:30 suz Exp $
 
 <200603>
+2006-03-17  SUZUKI, Shinsuke <suz@alaxala.net>
+	* kame/sys/netinet6/nd6.c: fixed a memory leak for an unresolved
+	packet in ND queue
+
 2006-03-15  SUZUKI, Shinsuke <suz@alaxala.net>
 	* kame/sys/netinet6/nd6_rtr.c: implements section 2.2. of 
 	RFC4191, regarding the reserved preference value (10).
